Fix: clampable text layout shift when expanding descriptions.
Keep the collapsed description container at the same width and origin as the expanded view by moving line-clamp to an inner element and removing collapsed-only padding.

--- a/cultpodcasts/src/app/clampable-text/clampable-text.component.sass
+++ b/cultpodcasts/src/app/clampable-text/clampable-text.component.sass
@@ -1,16 +1,20 @@
 .clampable-text__body
     position: relative
 
-    &.is-clamped .clampable-text__content
-        padding-right: 2rem
-        padding-bottom: 0.25rem
-
 .clampable-text__content
+    width: 100%
+
+.clampable-text__clamp
     &.is-clamped
         display: -webkit-box
         -webkit-box-orient: vertical
         -webkit-line-clamp: var(--clamp-lines)
         overflow: hidden
+        width: 100%
+
+        > p
+            display: contents
+            margin: 0
 
 .clampable-text__toggle
     position: absolute
